// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App removing rendered expression 1`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <withI18nextTranslation(FormActions) />
  </withI18nextTranslation(Form)>
  <Render
    data="LAYOUT(PARSED(test expression))"
    onRender={[Function]}
  />
</Fragment>
`;

exports[`App removing rendered expression 2`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr=""
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering 1`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr=""
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering an expression 1`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr=""
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering an expression 2`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
  <withI18nextTranslation(Loader) />
</Fragment>
`;

exports[`App rendering an expression 3`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <withI18nextTranslation(FormActions) />
  </withI18nextTranslation(Form)>
  <Render
    data="LAYOUT(PARSED(test expression))"
    onRender={[Function]}
  />
</Fragment>
`;

exports[`App rendering image details 1`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <withI18nextTranslation(FormActions) />
  </withI18nextTranslation(Form)>
  <Render
    data="LAYOUT(PARSED(test expression))"
    onRender={[Function]}
  />
</Fragment>
`;

exports[`App rendering image details 2`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="js"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  >
    <withI18nextTranslation(FormActions)
      imageDetails={
        Object {
          "svg": "test svg content",
        }
      }
    />
  </withI18nextTranslation(Form)>
  <Render
    data="LAYOUT(PARSED(test expression))"
    onRender={[Function]}
  />
</Fragment>
`;

exports[`App rendering with an invalid syntax 1`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr=""
    onSubmit={[Function]}
    syntax="invalid"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
</Fragment>
`;

exports[`App rendering with an invalid syntax 2`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="invalid"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
  <withI18nextTranslation(Loader) />
</Fragment>
`;

exports[`App rendering with an invalid syntax 3`] = `
<Fragment>
  <withI18nextTranslation(Form)
    expr="test expression"
    onSubmit={[Function]}
    syntax="invalid"
    syntaxList={
      Array [
        Object {
          "id": "testJS",
          "label": "Testing JS",
        },
        Object {
          "id": "other",
          "label": "Other",
        },
      ]
    }
  />
  <Message
    heading="TRANSLATE(Render Failure)"
    type="error"
  >
    <p>
      <Trans>
        An error occurred while rendering the regular expression.
      </Trans>
    </p>
    <a
      href="#retry"
      onClick={[Function]}
    >
      <Trans>
        Retry
      </Trans>
    </a>
  </Message>
</Fragment>
`;
